--- a/templates/adr/template.yaml
+++ b/templates/adr/template.yaml
@@ -82,6 +82,7 @@ spec:
     - title: Repository location
       required:
         - repoUrl
+        - adrNumber
       properties:
         repoUrl:
           title: Repository Location
@@ -93,6 +94,9 @@ spec:
             allowedOwners:
               - hmcts
               - hmcts-test
+        adrNumber:
+          type: string
+          title: 4 digit ADR number (e.g. 0001). This will be prefixed to the ADR filename and should be one more than the previously created ADR.
   steps:
     - id: fetch-adr
       name: Fetch ADR skeleton
@@ -119,7 +123,7 @@ spec:
       input:
         files:
           - from: ./docs/adrs/adr_template.md
-            to: './docs/adrs/${{ parameters.adrTitle }}.md'
+            to: './docs/adrs/${{ parameters.adrNumber }}.md'
 
     - id: publish
       name: Publish ADR via GitHub
