--- a/templates/adr/template.yaml
+++ b/templates/adr/template.yaml
@@ -123,7 +123,7 @@ spec:
       input:
         files:
           - from: ./docs/adrs/adr_template.md
-            to: './docs/adrs/${{ parameters.adrNumber }}${{ parameters.title | replace(" ", "_") | lower}}.md'
+            to: './docs/adrs/${{ parameters.adrNumber }}${{ parameters.adrTitle | replace(" ", "_") | lower}}.md'
 
     - id: publish
       name: Publish ADR via GitHub
